# gamelibs-zlib

./: .gitignore  Makefile  crc32.c  crc32.h  deflate.c  deflate.h  gzguts.h  gzwrite.c  infback.c  inffast.h  inffixed.h  inflate.c  inflate.h  inftrees.c  inftrees.h  meson.build  trees.c  trees.h  zconf.h
projects/codeblocks/: .gitignore  zlib.cbp
projects/msvc/: zlib.vcxproj  zlib.vcxproj.filters
projects/visualc2005/: zlib.vcproj
projects/visualc2008/: zlib.vcproj
projects/visualc2012/: zlib.vcxproj  zlib.vcxproj.filters
